@@ -1,6 +1,9 @@
 1998-10-04  Ben Elliston  <bje@cygnus.com>
 
+	* tests/mutex2.c: Test pthread_mutex_trylock(). Passes.
+
 	* tests/mutex1.c: New basic test for mutex functions (it passes).
+	(main): Eliminate warning.
 
 	* configure.in: Test for __stdcall, not _stdcall. Typo.
 
